ethod new org.jongo.rest.xstream.Usage() invokes inefficient new Long(long) constructor; use Long.valueOf(long) instead